--- a/flexbox/item(flex-grow).html
+++ b/flexbox/item(flex-grow).html
@@ -17,6 +17,16 @@
     <div class="item">4</div>
     <div class="item">5</div>
   </div>
+
+  <br>-<br>-<br>-<br>-<br>-<br>-<br>-<br>-<br>
+
+  <div class="container22">
+    <div class="item2">a</div>
+    <div class="item2">b</div>
+    <div class="item2">c</div>
+
+  </div>
+
 </body>
 
 </html>
