align-self(container속성) 추가

--- a/flexbox/container(align-items).html
+++ b/flexbox/container(align-items).html
@@ -31,6 +31,18 @@
     <div class="item2">9</div>
   </div>
 
+  <div class="container3">
+    <div class="item3">1</div>
+    <div class="item3">2</div>
+    <div class="item3">3</div>
+    <div class="item3">4</div>
+    <div class="item3">5</div>
+    <div class="item3">6</div>
+    <div class="item3">7</div>
+    <div class="item3">8</div>
+    <div class="item3">9</div>
+  </div>
+
 </body>
 
 </html>
