--- a/Grid/container(display, grid-temple-colums, grid-temple-rows ).html
+++ b/Grid/container(display, grid-temple-colums, grid-temple-rows ).html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/container(display).css">
+  <link rel="stylesheet" href="styles/container(display, grid-temple-colums, grid-temple-rows ).css">
   <title>Document</title>
 </head>
 
