--- a/Grid/item(order, z-index).html
+++ b/Grid/item(order, z-index).html
@@ -12,11 +12,20 @@
 <body>
 
   <div class="container">
-    <div class="item denis">1</div>
+    <div class="items">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
     <div class="item">4</div>
     <div class="item">5</div>
+  </div>
+
+  <br><br><br><br>
+
+
+  <div class="container2">
+    <div class="item2">1</div>
+    <div class="item2">2</div>
+
   </div>
 
 </body>
